# a-nvlkv-xyz

./: .gitignore  .gitmodules  .svgtofontrc.json  .xatarc  ACKNOWLEDGEMENTS.md  Cargo.toml  README.md  bio.py  build.rs  config.toml  dataset.py  hug-me.py  kandinsky-prior-config.yml  netlify.toml  package.json  rust-toolchain.toml  spin.toml  taxonomies.yaml  test.py  train.py  train.sh
.github/workflows/: deploy.yml
.xata/migrations/: .ledger  mig_cp186v8jss4ru94fh7f0.json  mig_cp1i67ojss4ru94fha3g.json  mig_cp1i6bojss4ru94fha4g.json  mig_cp1i6egjss4ru94fha5g.json  mig_cp1i6h0jss4ru94fha6g.json  mig_cp1i6jgjss4ru94fha7g.json  mig_cp1i7o0jss4ru94fha9g.json  mig_cp1i7sde76m493lr3pv0.json  mig_cp1i8agjss4ru94fhaag.json  mig_cp1i8e0jss4ru94fhabg.json  mig_cp1i8gle76m493lr3q00.json  mig_cp1i8j0jss4ru94fhacg.json  mig_cp1i8lde76m493lr3q10.json  mig_cp1i8sojss4ru94fhadg.json  mig_cp1i95le76m493lr3q20.json  mig_cp1i9d5e76m493lr3q30.json  mig_cp1ibh0jss4ru94fhaeg.json  mig_cp56vrmdf6rflokfdba0.json  mig_cp7lf5ldtk1oge8dhra0.json  mig_cpbmo8cp0g31oum7uc3g.json  mig_cpbmojjaqhh1b7303320.json  mig_cpbmonjaqhh1b7303330.json  mig_cpbmos4hfm5dg7u8l1eg.json  mig_cpbmp3chfm5dg7u8l1fg.json  mig_cpjh8jarr5tm50rml37g.json  mig_cpklmhtfebmce6eifln0.json  mig_cpklmstfebmce6eiflo0.json  mig_cpkln0lfebmce6eiflp0.json  mig_cpkln5dfebmce6eiflq0.json  mig_cpkln9dfebmce6eiflr0.json  mig_cpklnflfebmce6eifls0.json  mig_cpklns3s759fnduvep60.json  mig_cpklo6js759fnduvep70.json  mig_cpklprdfebmce6eiflt0.json  mig_cpkrgojs759fnduvetqg.json  mig_cpkrh4sr3t9b7kv0r5lg.json  mig_cpkrh9rs759fnduvetrg.json  mig_cpkrhg4r3t9b7kv0r5mg.json  mig_cpkrhj4r3t9b7kv0r5ng.json  (+10 more)
assets/: anvlkv-done-button.riv  manifest.json
content/: _index.md  acknowledgements.md  bio.md  commissions.md  contact-success.md  contact.md  donations.md  license.md  timeline.md
content/bio/: 1989-1996.md  1996-2006.md  2004-2006.md  2005.md  2006-2009.md  2010-2011.md  2011.md  2012-2013.md  2013-2014.md  2013.md  2014-2015.md  2015-2016.md  2016-2019.md  2016.md  2017-2018.md  2018-2020.md  2020-2021.md  2021-2022.md  2021.md  2022-2023.md  2022.md  2023.04.md  2023.06.md  2023.md  _index.md  index.md
content/cv/: 00_nurse.md  04_ddg_2.md  06_pre-sustainability.md  _index.md
content/portfolio/: _index.md
content/portfolio/42/: index.md
content/portfolio/afimall/: index.md
content/portfolio/afimoll/: index.md
content/portfolio/bloobls/: index.md
content/portfolio/body of water/: index.md
content/portfolio/body_of_water/: index.md
content/portfolio/cargo/: index.md
content/portfolio/cir/: index.md
content/portfolio/ddgcorpru/: index.md
content/portfolio/dove/: index.md
content/portfolio/fallinlove/: index.md
content/portfolio/flying series/: index.md
content/portfolio/flying_series/: index.md
content/portfolio/gaian suicide/: index.md
content/portfolio/gaian_suicide/: index.md
content/portfolio/holy kangaroo/: index.md
content/portfolio/holy_kangaroo/: index.md
content/portfolio/horsehead/: index.md
content/portfolio/humour_box/: index.md
content/portfolio/impossible time/: index.md
content/portfolio/impossible_time/: index.md
content/portfolio/jumpsuit/: index.md
content/portfolio/khali/: index.md
content/portfolio/kings day/: index.md
content/portfolio/kings_day/: index.md
content/portfolio/kiss/: index.md
content/portfolio/long belt coat/: index.md
content/portfolio/long_belt_coat/: index.md
content/portfolio/mama, life had just begun/: index.md
content/portfolio/mama_life_had_just_begun/: index.md
content/portfolio/mirror selfie/: index.md
content/portfolio/mirror_selfie/: index.md
content/portfolio/nexi/: index.md
content/portfolio/open EIR/: index.md
content/portfolio/open_EIR/: index.md
content/portfolio/paniku/: index.md
content/portfolio/picket-nav/: index.md
content/portfolio/play/: index.md
content/portfolio/polymathic/: index.md
content/portfolio/sima-pro/: index.md
content/portfolio/smokin the city/: index.md
content/portfolio/smokin_the_city/: index.md
content/portfolio/take it easy/: index.md
content/portfolio/take_it_easy/: index.md
content/portfolio/takow put'/: index.md
content/portfolio/takow_put/: index.md
content/portfolio/time on earth/: index.md
content/portfolio/time_on_earth/: index.md
content/portfolio/twopack-gallery/: index.md
content/portfolio/untitled-1/: index.md
content/portfolio/untitled-10/: index.md
content/resume/: 00_nurse.md  01_leo.md  02_ofis.md  03_mozgy.md  04_ddg_2.md  05_ddg_1.md  06_pre-sustainability.md  _index.md
form-signal/: Cargo.toml
form-signal-macro/: Cargo.toml
form-signal-macro/src/: form_state.rs  form_state_self.rs  from_into.rs  lib.rs  signal_get.rs
form-signal-macro/tests/: mod.rs
form-signal/src/: lib.rs
locales/: app.yml  landing.yml  resume-cv.yml  util.yml  worksheets.yml
migrations/: tracking-up.sql
openbiogen/: Cargo.toml
sass/: _animation.scss  _bio.scss  _config.scss  _cv.scss  _form.scss  _landing.scss  _layout.scss  _navigation.scss  _page.scss  _portfolio.scss  _vars.scss  anvlkv-dark.scss  anvlkv.scss  style.scss
sql/: tracking-down.sql  tracking-up.sql
src/: app.rs  lib.rs  main.rs  server.rs
src/app/: form.rs  state.rs  tracking.rs  util.rs
src/bindings/: mod.rs  rive.rs
static/: site.webmanifest
static/favicon/: site.webmanifest
style/: _dummy.scss  _global.scss  _icons.scss  _landing.scss  _util.scss  _worksheet.scss  main.scss  tailwind.config.js
templates/: 404.html  base.html  commissions.html  contact.html  cv.html  employer.html  index.html  layout.html  macros.html  page.html  resume.html
templates/bio/: index.html  page.html
templates/category/: single.html
templates/employer/: single.html
templates/portfolio/: index.html  page.html
(+100 files in other folders)
