[package]
name = "a-nvlkv-xyz"
authors = ["anvlkv <2813794+anvlkv@users.noreply.github.com>"]
description = ""
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1"
cfg-if = "1"
console_error_panic_hook = "0.1"
http = "1"
leptos = "0.6"
leptos_integration_utils = { version = "0.6", optional = true }
leptos_meta = "0.6"
leptos_router = "0.6"
leptos-spin = { version = "0.1.0", optional = true }
serde = "1"
spin-sdk = { version = "2", optional = true }
wasm-bindgen = { version = "0.2", optional = true }

[workspace]

[features]
csr = ["leptos/csr", "leptos_meta/csr", "leptos_router/csr"]
hydrate = [
    "leptos/hydrate",
    "leptos_meta/hydrate",
    "leptos_router/hydrate",
    "dep:wasm-bindgen",
]
ssr = [
    "leptos/ssr",
    "leptos_meta/ssr",
    "leptos_router/ssr",
    "leptos/spin",
    "dep:spin-sdk",
    "dep:leptos-spin",
    "dep:leptos_integration_utils",
]

[package.metadata.leptos]
# The name used by wasm-bindgen/cargo-leptos for the JS/WASM bundle. Defaults to the crate name
output-name = "a_nvlkv_xyz"
style-file = "style/main.scss"
bin-features = ["ssr"]
bin-default-features = false
lib-features = ["hydrate"]
lib-default-features = false
