[package]
name = "form-signal-macro"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
proc-macro-error = { version = "1", default-features = false }
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full"] }


[dev-dependencies]
form-signal = { path = "../form-signal" }
leptos = "0.6.11"
